# skillful-alhazen

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.mcp  Makefile  README.md  SECURITY.md  agents-registry.yaml  docker-compose-huridocs.yml  docker-compose-typedb-mcp.yml  docker-compose-typedb.yml  docker-compose.yml  errors.txt  pyproject.toml  requirements-mcp.txt  skills-registry.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: claude-autofix.yml
agents/_template/: AGENT.md  agent.yaml
agents/career-assistant/: AGENT.md  agent.yaml
agents/jobhunt/: AGENT.md  agent.yaml
connections/: README.md
dashboard/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
dashboard/public/: embedding-map.json  namespace-config.json  skills-config.json
deploy/: deploy.sh  playbook.yml  update-channels.yml
docs/: architecture.md  concepts.md  conventions.md  dashboard-guide.md  gap-skilllog-architecture.md  getting-started.md  history.md  index.md  migrate-to-new-machine.md  schema-lifecycle.md
docs/skills/: domain-modeling.md  epmc-search.md  index.md  jobhunt.md  typedb-notebook.md
hub/: Dockerfile  index.html
local_resources/branding/: swirl-icon.tiff
local_resources/openclaw/: AGENTS.md  SOUL.md
local_resources/searxng/: settings.yml
local_resources/skilllog/: litellm_callback.py  skill_logger.py
scripts/: apply_rename_map.py  build_typedb_docs.py  compile_schema_map.py  core-schema.tql  db_init.py  db_retire_namespace.py  export_all_data.py  fix_position_company_links.py  migrate_namespace_rename.py  plugin-init.sh  rename_map.json  test-plugin.sh
skills/_template/: schema.tql  (+2 more)
tests/: test_agentic_memory.py  test_typedb_client.py
(+264 files in other folders)
