[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillful-alhazen"
dynamic = ["version"]
description = "A TypeDB-powered scientific knowledge notebook."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "GullyBurns", email = "gullyburns@gmail.com" },
]
keywords = [
    "ai",
    "scientific-knowledge",
    "typedb",
    "knowledge-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "importlib-resources>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
typedb = [
    "typedb-driver>=2.25.0,<3.0.0",
]
mcp = [
    "typedb-driver>=2.25.0,<3.0.0",
    "mcp>=1.0.0",
]

[project.scripts]

[project.urls]
Homepage = "https://github.com/GullyBurns/skillful-alhazen"
Repository = "https://github.com/GullyBurns/skillful-alhazen"

[template.licenses]
headers = true
default = [
  "Apache-2.0",
]

[tool.hatch.version]
path = "src/skillful_alhazen/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/src/skillful_alhazen"]

[tool.hatch.build.targets.wheel]
packages = ["src/skillful_alhazen"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
